# yarusto

./: Cargo.toml  README.md  dprint.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  converter.rs  error.rs  lib.rs  main.rs
src/model/: cases_config.rs  config.rs
src/model/raw/: config1.rs
src/model/types/: duration.rs  memory_size.rs  mod.rs
