[package]
name = "yarusto"
version = "0.1.0"
authors = ["NJUPT-SAST"]
edition = "2021"
license = "MIT"
repository = "https://github.com/NJUPT-SAST/yarusto"
rust-version = "1.78"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
async-walkdir = "2.0.0"
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs"] }
byte-unit = "5.1.6"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yml = "0.0.11"
size = "0.4.1"
tar = "0.4.43"
tempfile = "3.13.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.16"
toml = "0.8.19"
zip = "2.2.0"
zstd = "0.13.2"

# futures-lite = "2.3.0"
# indicatif = "0.17.8"

# [build-dependencies]
# clap = { version = "4.5.4", features = ["derive"] }
# clap_complete = "4.5.2"
# clap_mangen = "0.2.20"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
