[package]
name = "yarusto"
version = "0.1.0"
authors = ["NJUPT-SAST"]
edition = "2021"
license = "MIT"
repository = "https://github.com/NJUPT-SAST/yarusto"
rust-version = "1.78"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
async-walkdir = "2.1.0"
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs"] }
byte-unit = "5.1.6"
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml_ng = "0.10.0"
size = "0.5.0"
tar = "0.4.43"
tempfile = "3.17.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
zip = "2.2.2"
zstd = "0.13.2"

# futures-lite = "2.3.0"
# indicatif = "0.17.8"

# [build-dependencies]
# clap = { version = "4.5.4", features = ["derive"] }
# clap_complete = "4.5.2"
# clap_mangen = "0.2.20"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dev-dependencies]
static_assertions = "1.1.0"
