[package]
name = "yarusto"
version = "0.1.0"
authors = ["NJUPT-SAST"]
edition = "2024"
license = "MIT"
repository = "https://github.com/NJUPT-SAST/yarusto"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-walkdir = "2.1.0"
async_zip = { version = "0.0.18", features = ["tokio", "tokio-fs"] }
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
size = "0.5.0"
tar = "0.4.44"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.18"
toml = "0.9.11"
zip = "7.2.0"
zstd = "0.13.3"

# futures-lite = "2.3.0"
# indicatif = "0.17.8"

# [build-dependencies]
# clap = { version = "4.5.4", features = ["derive"] }
# clap_complete = "4.5.2"
# clap_mangen = "0.2.20"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dev-dependencies]
static_assertions = "1.1.0"
